--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sass": "^1.44.0",
     "sass-loader": "^12.4.0",
     "sass-to-string": "^1.6.0",
+    "sinon": "^12.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
